<resources>
    <string name="app_name">Event_App</string>
    <string name="btn_reg_admin">Login in as Organizer</string>
    <string name="title_student_login">Student Login</string>
    <string name="register_student">New? Register Here</string>
    <string name="register_title">Register as a Student</string>
    <string name="already_exist_btn">Already have an Account?</string>
    <string name="login_student_btn">Login in as Student</string>
    <string name="title_admin_login">Organizer Login</string>
    <string name="title_activity_home2">Home2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_details">details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>