<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.4"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="276dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/roundborder_white"
        android:onClick="changeActAdmin"
        android:text="@string/btn_reg_admin"
        android:textColor="@color/student_login"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="483dp"
        android:layout_height="86dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/title_student"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/title_student_login"
        android:textColor="@color/student_login"
        android:textColorLink="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="268dp"
        android:layout_height="61dp"
        android:background="@drawable/roundborder_white"
        android:ems="10"
        android:hint="Email/Username"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/student_login"
        android:textColorHint="#FFFFFF"
        android:textColorLink="@color/student_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.097" />

    <EditText
        android:id="@+id/pass_login"
        android:layout_width="260dp"
        android:layout_height="66dp"
        android:background="@drawable/roundborder_white"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/student_login"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login"
        app:layout_constraintVertical_bias="0.128" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="83dp"
        android:layout_height="44dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/roundborder_white"
        android:onClick="onclicklogin"
        android:text="Login"
        android:textColor="@color/student_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_login"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button3"
        android:layout_width="298dp"
        android:layout_height="59dp"
        android:background="@drawable/roundborder_white"
        android:onClick="changeActReg"
        android:text="@string/register_student"
        android:textColor="@color/student_login"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintVertical_bias="0.82" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>