<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

  <androidx.constraintlayout.widget.ConstraintLayout


      android:layout_width="match_parent"
      android:layout_height="match_parent"

      tools:context=".Register_Student">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login"
        android:alpha="0.5"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="296dp"
        android:layout_height="61dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundborder_white"
        android:onClick="changeActReg_admin"
        android:text="@string/btn_reg_admin"
        android:textColor="@color/student_login"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="483dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/title_student"
        android:fontFamily="@font/bungee"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="@color/student_login"
        android:textColorLink="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <EditText
        android:id="@+id/name"
        android:layout_width="238dp"
        android:layout_height="58dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundborder_white"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/student_login"
        android:textColorHint="@color/student_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/email_reg"
        android:layout_width="241dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundborder_white"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/student_login"
        android:textColorHint="@color/student_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/roll"
        android:layout_width="238dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundborder_white"
        android:ems="10"
        android:hint="Roll No."
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="@color/student_login"
        android:textColorHint="@color/student_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_reg" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundborder_white"
        android:ems="10"
        android:hint="New Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/student_login"
        android:textColorHint="@color/student_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roll" />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="137dp"
        android:layout_height="55dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundborder_white"
        android:text="Register"
        android:textColor="@color/student_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass2" />

    <Button
        android:id="@+id/btn_regtologin"
        android:layout_width="286dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"

        android:background="@drawable/roundborder_white"
        android:onClick="changeActReg_student"
        android:text="@string/already_exist_btn"
        android:textColor="@color/student_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_reg" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="236dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/roundborder_white"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/student_login"
        android:textColorHint="@color/student_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

